[gd_scene load_steps=4 format=2]

[ext_resource path="res://workshop.gd" type="Script" id=1]
[ext_resource path="res://card_system/deck.gd" type="Script" id=2]
[ext_resource path="res://card_system/card_db.gd" type="Script" id=3]

[node name="Workshop" type="Node2D"]
script = ExtResource( 1 )

[node name="Tabletop" type="Node2D" parent="."]

[node name="Deck" type="Node" parent="."]
script = ExtResource( 2 )

[node name="DiscardDeck" type="Node" parent="."]
script = ExtResource( 2 )

[node name="CardDb" type="Node" parent="."]
script = ExtResource( 3 )
json_file_path = "res://all_diskettes_01.json"

[node name="DealTurnButton" type="Button" parent="."]
margin_left = 30.0
margin_top = 20.0
margin_right = 101.0
margin_bottom = 40.0
text = "Deal turn"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="DealTurnButton" to="." method="_on_DealTurnButton_button_up"]
